--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "E-Commerce API",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
+    
   },
   "author": "Shahrukh",
   "license": "ISC",
